<resources>
    <string name="app_name">𝒀𝑨𝑯𝒀𝑨 𝑽𝑰𝑷</string>
    <string name="app_description">HELLO HACK - 𝒀𝑨𝑯𝒀𝑨 𝑳𝑶𝑨𝑫𝑬𝑹</string>
    <string name="invalid_key_format">Haha look what the horse is doing 🤣</string>
    <string name="player">Radar</string>
    <string name="navItem">Items</string>
    <string name="navAim">Aim</string>
    <string name="navSdk">More</string>
    <string name="close">Close</string>
    <string name="uninstall_title">Uninstall %1$s</string>
    <string name="uninstall_message">Do you want to uninstall the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disable">Disable</string>
    <string name="weapon">Weapon</string>
    <string name="uninstalling">Uninstalling %1$s</string>
    <string name="menu_opened">Menu opened</string>
    <string name="menu_closed">Menu closed</string>
    <string name="pastekey">Paste Key</string>
    <string name="login">Login</string>
    <string name="install">Install</string>
    <string name="open">Open</string>
    <string name="please_wait">Please wait ...</string>
    <string name="updating_app">Updating App</string>
    <string name="new_update_available">New update available</string>
    <string name="new_version_features">New version with performance and security improvements</string>
    <string name="update_now">Update Now</string>
<string name="install_permission_required">صلاحية التثبيت مطلوبة</string>
<string name="install_permission_message">يجب منح صلاحية تثبيت التطبيقات من مصادر غير معروفة للمتابعة</string>
<string name="install_permission_denied">لم يتم منح صلاحية التثبيت</string>
<string name="install_permission_error">لا يمكن فتح إعدادات الصلاحيات</string>
    <string name="vip_protection_activated">🟢 VIP Protection Activated</string>
    <string name="free_protection_activated">🔵 Free Protection Activated</string>
    <string name="download_error">❌ Download Error: </string>
    <string name="update_required">App must be updated</string>
    <string name="install_error">❌ App Installation Error</string>
    <string name="update_detected">Update detected to version: </string>
    <string name="unknown_version">Unknown app version: %1$s</string>
    <string name="obb_not_found">OBB file not found for app: %1$s</string>
    <string name="failed_create_dir">Failed to create destination folder</string>
    <string name="obb_already_installed">OBB already installed %1$s</string>
    <string name="obb_app_not_installed">App not installed on your phone. Please install %1$s first from Play Store then try again.</string>
    <string name="obb_storage_permission_required">App needs storage permissions to access OBB file. Please grant required permissions.</string>
    <string name="obb_file_missing">OBB file not found for app. Please reopen game from store to ensure installation complete.</string>
    <string name="obb_error_title">Installation Error</string>
    <string name="ok_button">OK</string>
    <string name="grant_permission">Grant Permissions</string>
    <string name="open_play_store">Open Play Store</string>
    <string name="uninstall">Uninstall</string>
    <string name="protection">Server</string>
    <string name="logout">App Logout</string>
    <string name="logoutt">Logout</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="donwload">Download</string>
    <string name="pro">Pro</string>
    <string name="please_click_icon_logout_for_exit">Please click logout icon to exit!!</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_allow_permision_floating">Please allow floating permission</string>
    <string name="exit">Exit</string>
    <string name="file_access_title">File Access Permission</string>
    <string name="file_access_message">This app needs permission to access files in your device storage to work properly. Please grant permission to continue.</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="bottom_sheet_dialog_layout_title_text">Title</string>
    <string name="bottom_sheet_dialog_layout_msg_text">Message</string>
    <string name="bottom_sheet_dialog_layout_btn_cancle_text">No</string>
    <string name="bottom_sheet_dialog_layout_btn_text">OK</string>
    <string name="obb_copied">Copied</string>
    <string name="esp">ESP</string>
    <string name="esp_visual_isenableesp_text">Enable ESP</string>
    <string name="line">Line</string>
    <string name="box">Box</string>
    <string name="skeleton">Skeleton</string>
    <string name="health">Health</string>
    <string name="distance">Distance</string>
    <string name="name">Name</string>
    <string name="head">Head</string>
    <string name="hide_bot">Hide Bot</string>
    <string name="esp_aimbot_rangetext_text">0</string>
    <string name="esp_aimbot_distancetext_text">0</string>
    <string name="esp_aimbot_bulletspeedtext_text">0</string>
    <string name="esp_aimbot_recoiltext_text">0</string>
    <string name="esp_memory_rangetextwide_text">0</string>
    <string name="aim">Aim</string>
    <string name="aimbot">Aimbot</string>
    <string name="ignore_knocked">Don\'t Ignore Knocked</string>
    <string name="ignore_aiming_when_knock">Ignore Aiming When Knocked</string>
    <string name="ignore_bot">Ignore Bot</string>
    <string name="ignores_aiming_at_bots">Ignores Aiming at Bots</string>
    <string name="aiming_range">Aiming Range</string>
    <string name="set_fov_radius_range">Set FOV Radius Range:</string>
    <string name="aiming_distance">Aiming Distance</string>
    <string name="aiming_speed">Aiming Speed</string>
    <string name="recoil_compesation">Recoil Compensation</string>
    <string name="set_the_weapon_compensation_recoil">Set Weapon Recoil Compensation:</string>
    <string name="target_aiming">Target Aiming</string>
    <string name="aiming_priority">Aiming Priority</string>
    <string name="aim_trigger_mode">Aim Trigger Mode</string>
    <string name="aimbot_100m">Aimbot 100m</string>
    <string name="increases_aiming_speed">Increases Aiming Speed</string>
    <string name="wide_view">Wide View</string>
    <string name="set_wide_view_range">Set Wide View Range:</string>
    <string name="esp_aimbot_radioButton_text">Head</string>
    <string name="esp_aimbot_radioButton2_text">Neck</string>
    <string name="esp_aimbot_radioButton3_text">Chest</string>
    <string name="esp_aimbot_radioButton9_text">Cross Priority</string>
    <string name="esp_aimbot_radioButton4_text">Distance Priority</string>
    <string name="esp_aimbot_radioButton5_text">Aim or Shoot</string>
    <string name="esp_aimbot_radioButton6_text">Aim Only</string>
    <string name="esp_aimbot_radioButton7_text">Shoot Only</string>
    <string name="protection_mode">Protection Menu</string>
    <string name="protection_logo">Logo Protection</string>
    <string name="block_report_island">Arena Protection</string>
    <string name="vision_mode">Vision</string>
    <string name="recoil_weapon_slot_1">Weapon Recoil 1</string>
    <string name="recoil_weapon_slot_2">Weapon Recoil 2</string>
    <string name="touch_simulation">Touch Simulation</string>
    <string name="bullet_tracking">Bullet Track</string>
    <string name="touch_simulation_setting">Touch Simulation Settings</string>
    <string name="other_setting">Other Settings</string>
    <string name="sets_smooth_velocity_aim">Set Smooth Aim Velocity:</string>
    <string name="smooth_velocity">Smooth Velocity</string>
    <string name="sets_the_aiming_bullet_speed">Set Aiming Bullet Speed:</string>
    <string name="aiming_bullet_speed">Aiming Bullet Speed</string>
    <string name="change_rotatation_screen">Change Screen Rotation</string>
    <string name="rotation_screen">Charging Port on Left</string>
    <string name="show_area_touch">Show Touch Area</string>
    <string name="indicates_where_to_touch">Indicates Where to Touch</string>
    <string name="touch_range_size">Touch Range Size</string>
    <string name="sets_range_size_of_touch">Set Touch Range Size:</string>
    <string name="touch_position_x">Touch Position X</string>
    <string name="sets_postion_y_of_touch">Set Touch Position Y:</string>
    <string name="sets_postion_x_of_touch_">Set Touch Position X:</string>
    <string name="touch_position_y">Touch Position Y</string>
    <string name="setting_the_shot_distance">Set Shot Distance:</string>
    <string name="sets_the_shot_prediction_distance">Set Shot Prediction Distance:</string>
    <string name="check_all">Select All</string>
    <string name="none_all">Deselect All</string>
    <string name="bgmi">BGMI</string>
    <string name="global">GLOBAL</string>
    <string name="korea">KOREA</string>
    <string name="vietnam">VIETNAM</string>
    <string name="taiwan">TAIWAN</string>
    <string name="twitter">TWITTER</string>
    <string name="esp_inventory_UTV_text">UTV</string>
    <string name="esp_inventory_MonsterTruck_text">Monster</string>
    <string name="esp_inventory_Buggy_text">Buggy</string>
    <string name="esp_inventory_UAZ_text">UAZ</string>
    <string name="esp_inventory_Trike_text">Trike</string>
    <string name="esp_inventory_Jet_text">Jet</string>
    <string name="esp_inventory_CoupeRB_text">Coupe</string>
    <string name="esp_inventory_Motorglider_text">Glider</string>
    <string name="esp_inventory_Bike_text">Bike</string>
    <string name="esp_inventory_Dacia_text">Dacia</string>
    <string name="esp_inventory_Boat_text">Boat</string>
    <string name="esp_inventory_Bus_text">Bus</string>
    <string name="esp_inventory_Mirado_text">Mirado</string>
    <string name="esp_inventory_Snowbike_text">Snow Bike</string>
    <string name="esp_inventory_Scooter_text">Scooter</string>
    <string name="esp_inventory_Rony_text">Rony</string>
    <string name="esp_inventory_Snowmobile_text">Snowmobile</string>
    <string name="esp_inventory_Tempo_text">Tempo</string>
    <string name="esp_inventory_Truck_text">Truck</string>
    <string name="esp_inventory_LadaNiva_text">Lada Niva</string>
    <string name="esp_inventory_BRDM_text">BRDM</string>
    <string name="esp_inventory_ATV_text">ATV1</string>
    <string name="esp_inventory_Crate_text">Crate</string>
    <string name="esp_inventory_Airdrop_text">Airdrop</string>
    <string name="esp_inventory_DropPlane_text">Drop Plane</string>
    <string name="esp_inventory_FlareGun_text">Flare Gun</string>
    <string name="esp_inventory_x2_text">2x</string>
    <string name="esp_inventory_x3_text">3x</string>
    <string name="esp_inventory_x4_text">4x</string>
    <string name="esp_inventory_x6_text">6x</string>
    <string name="esp_inventory_x8_text">8x</string>
    <string name="esp_inventory_reddot_text">Red Dot</string>
    <string name="esp_inventory_hollow_text">Hollow</string>
    <string name="esp_inventory_canted_text">Canted</string>
    <string name="esp_inventory_m416_text">M416</string>
    <string name="esp_inventory_AKM_text">AKM</string>
    <string name="esp_inventory_M16A4_text">M16A4</string>
    <string name="esp_inventory_M762_text">M762</string>
    <string name="esp_inventory_SCARL_text">SCAR-L</string>
    <string name="esp_inventory_AC32_text">ACE32</string>
    <string name="esp_inventory_AUG_text">AUG</string>
    <string name="esp_inventory_HoneyBadger_text">Honey Badger</string>
    <string name="esp_inventory_G36C_text">G36C</string>
    <string name="esp_inventory_Groza_text">Groza</string>
    <string name="esp_inventory_QBZ_text">QBZ</string>
    <string name="esp_inventory_FAMAS_text">FAMAS</string>
</resources>