<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="0dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/theme"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:alpha="0.8"
                        android:fontFamily="@font/livaifont"
                        android:gravity="start|center"
                        android:text="@string/aimbot_100m"
                        android:textColor="@color/white"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/livaifont"
                        android:gravity="start|center"
                        android:text="@string/increases_aiming_speed"
                        android:textColor="@color/whitegelap"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center">

                    <Switch
                        android:id="@+id/isaimlock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumb="@drawable/ic_switch_off"
                        android:track="@drawable/ic_switch_on" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:alpha="0.8"
                    android:fontFamily="@font/livaifont"
                    android:text="@string/wide_view"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/livaifont"
                        android:text="@string/set_wide_view_range"
                        android:textColor="@color/whitegelap"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/rangetextwide"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:alpha="0.8"
                        android:fontFamily="@font/livaifont"
                        android:text="@string/esp_memory_rangetextwide_text"
                        android:textColor="@color/whitegelap"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/rangewide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="8"
                    android:progress="0"
                    style="@android:style/Widget.SeekBar"
                    android:progressTint="@color/button5"
                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>